[gd_scene load_steps=11 format=3 uid="uid://cduganxeld585"]

[ext_resource type="TileSet" uid="uid://cxkbxfjg6w030" path="res://prototypes/game-test/tiles.tres" id="1_0wfw1"]
[ext_resource type="Script" path="res://SpikeRun.gd" id="1_mgguh"]
[ext_resource type="Script" path="res://Camera2D.gd" id="2_7bj6n"]
[ext_resource type="Script" path="res://addons/pronto/behaviors/MoveBehavior.gd" id="4_3m17m"]
[ext_resource type="Script" path="res://SpikeWallMap.gd" id="4_m4gou"]
[ext_resource type="AudioStream" uid="uid://bl1ae8fx2x37n" path="res://Gears Factory Mechanical.mp3" id="6_0pqkv"]
[ext_resource type="Script" path="res://TileMap2.gd" id="7_pnsrs"]
[ext_resource type="Texture2D" uid="uid://coiaxftxa6ket" path="res://Light.png" id="7_y1342"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_f4ms5"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4q0av"]
size = Vector2(66, 578)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_mgguh")

[node name="Black" type="ColorRect" parent="."]
offset_left = -192.0
offset_right = 1352.0
offset_bottom = 704.0
color = Color(0, 0, 0, 1)

[node name="Torches" type="Node2D" parent="."]
position = Vector2(-128, -344)

[node name="TileMap2" type="TileMap" parent="Torches"]
material = SubResource("CanvasItemMaterial_f4ms5")
tile_set = ExtResource("1_0wfw1")
format = 2
layer_0/tile_data = PackedInt32Array(458766, 458752, 6, 458772, 458752, 6, 458778, 458752, 6, 458760, 458752, 6, 458754, 458752, 6, 524290, 393216, 5, 524296, 393216, 5, 524302, 393216, 5, 524308, 393216, 5, 524314, 393216, 5)
script = ExtResource("7_pnsrs")

[node name="PointLight2D" type="PointLight2D" parent="Torches/TileMap2"]
position = Vector2(160, 704)
scale = Vector2(73.8461, 223.59)
color = Color(0.745098, 0, 0, 1)
texture = ExtResource("7_y1342")
texture_scale = 0.3

[node name="PointLight2D2" type="PointLight2D" parent="Torches/TileMap2"]
position = Vector2(544, 704)
scale = Vector2(73.8461, 223.59)
color = Color(0.745098, 0, 0, 1)
texture = ExtResource("7_y1342")
texture_scale = 0.3

[node name="PointLight2D3" type="PointLight2D" parent="Torches/TileMap2"]
position = Vector2(928, 704)
scale = Vector2(73.8461, 223.59)
color = Color(0.745098, 0, 0, 1)
texture = ExtResource("7_y1342")
texture_scale = 0.3

[node name="PointLight2D4" type="PointLight2D" parent="Torches/TileMap2"]
position = Vector2(1312, 700)
scale = Vector2(73.8461, 223.59)
color = Color(0.745098, 0, 0, 1)
texture = ExtResource("7_y1342")
texture_scale = 0.3

[node name="PointLight2D5" type="PointLight2D" parent="Torches/TileMap2"]
position = Vector2(1696, 700)
scale = Vector2(73.8461, 223.59)
color = Color(0.745098, 0, 0, 1)
texture = ExtResource("7_y1342")
texture_scale = 0.3

[node name="PointLightCeiling" type="PointLight2D" parent="Torches/TileMap2"]
visible = false
position = Vector2(1132, 334)
scale = Vector2(646.154, 33.8461)
color = Color(0.745098, 0, 0, 1)
texture = ExtResource("7_y1342")
texture_scale = 0.3

[node name="TileMap" type="TileMap" parent="."]
material = SubResource("CanvasItemMaterial_f4ms5")
tile_set = ExtResource("1_0wfw1")
format = 2
layer_0/tile_data = PackedInt32Array(0, 327680, 5, 1, 327680, 5, 2, 327680, 5, 3, 327680, 5, 4, 327680, 5, 5, 327680, 5, 6, 327680, 5, 7, 327680, 5, 8, 327680, 5, 9, 327680, 5, 10, 327680, 5, 11, 327680, 5, 12, 327680, 5, 13, 327680, 5, 14, 327680, 5, 15, 327680, 5, 655360, 327680, 5, 655361, 327680, 5, 655362, 327680, 5, 655363, 327680, 5, 655364, 327680, 5, 655365, 327680, 5, 655366, 327680, 5, 655367, 327680, 5, 655368, 327680, 5, 655369, 327680, 5, 655370, 327680, 5, 655371, 327680, 5, 655372, 327680, 5, 655373, 327680, 5, 655374, 327680, 5, 655375, 327680, 5, 655376, 327680, 5, 655377, 327680, 5, 655378, 327680, 5, 655379, 327680, 5, 16, 327680, 5, 17, 327680, 5, 18, 327680, 5, 19, 327680, 5, 20, 327680, 5, 21, 327680, 5, 22, 327680, 5, 23, 327680, 5, 24, 327680, 5, 25, 327680, 5, 26, 327680, 5, 27, 327680, 5, 28, 327680, 5, 29, 327680, 5, 30, 327680, 5, 31, 327680, 5, 32, 327680, 5, 33, 327680, 5, 34, 327680, 5, 35, 327680, 5, 36, 327680, 5, 37, 327680, 5, 38, 327680, 5, 39, 327680, 5, 40, 327680, 5, 41, 327680, 5, 42, 327680, 5, 43, 327680, 5, 44, 327680, 5, 45, 327680, 5, 46, 327680, 5, 47, 327680, 5, 48, 327680, 5, 49, 327680, 5, 50, 327680, 5, 51, 327680, 5, 52, 327680, 5, 53, 327680, 5, 54, 327680, 5, 55, 327680, 5, 56, 327680, 5, 57, 327680, 5, 58, 327680, 5, 59, 327680, 5, 60, 327680, 5, 61, 327680, 5, 62, 327680, 5, 63, 327680, 5, 64, 327680, 5, 65, 327680, 5, 66, 327680, 5, 67, 327680, 5, 68, 327680, 5, 69, 327680, 5, 655380, 327680, 5, 655381, 327680, 5, 655382, 327680, 5, 655383, 327680, 5, 655384, 327680, 5, 655385, 327680, 5, 655386, 327680, 5, 655387, 327680, 5, 655388, 327680, 5, 655389, 327680, 5, 655390, 327680, 5, 655391, 327680, 5, 655392, 327680, 5, 655393, 327680, 5, 655394, 327680, 5, 655395, 327680, 5, 655396, 327680, 5, 655397, 327680, 5, 655398, 327680, 5, 655399, 327680, 5, 655400, 327680, 5, 655401, 327680, 5, 655402, 327680, 5, 655403, 327680, 5, 655404, 327680, 5, 655405, 327680, 5, 655406, 327680, 5, 655407, 327680, 5, 655408, 327680, 5, 655409, 327680, 5, 655410, 327680, 5, 655411, 327680, 5, 655412, 327680, 5, 655413, 327680, 5, 655414, 327680, 5, 655415, 327680, 5, 655416, 327680, 5, 655417, 327680, 5, 655418, 327680, 5, 655419, 327680, 5, 655420, 327680, 5, 655421, 327680, 5, 655422, 327680, 5, 655423, 327680, 5, 655424, 327680, 5, 655425, 327680, 5, 655426, 327680, 5, 655427, 327680, 5, 655428, 327680, 5, 655429, 327680, 5, 70, 327680, 5, 71, 327680, 5, 72, 327680, 5, 73, 327680, 5, 74, 327680, 5, 75, 327680, 5, 76, 327680, 5, 77, 327680, 5, 78, 327680, 5, 79, 327680, 5, 80, 327680, 5, 81, 327680, 5, 82, 327680, 5, 83, 327680, 5, 84, 327680, 5, 85, 327680, 5, 86, 327680, 5, 87, 327680, 5, 88, 327680, 5, 89, 327680, 5, 90, 327680, 5, 91, 327680, 5, 92, 327680, 5, 93, 327680, 5, 94, 327680, 5, 95, 327680, 5, 96, 327680, 5, 97, 327680, 5, 98, 327680, 5, 99, 327680, 5, 100, 327680, 5, 101, 327680, 5, 102, 327680, 5, 103, 327680, 5, 104, 327680, 5, 105, 327680, 5, 106, 327680, 5, 107, 327680, 5, 108, 327680, 5, 109, 327680, 5, 110, 327680, 5, 111, 327680, 5, 112, 327680, 5, 113, 327680, 5, 114, 327680, 5, 115, 327680, 5, 116, 327680, 5, 117, 327680, 5, 118, 327680, 5, 119, 327680, 5, 120, 327680, 5, 121, 327680, 5, 122, 327680, 5, 123, 327680, 5, 124, 327680, 5, 125, 327680, 5, 126, 327680, 5, 127, 327680, 5, 128, 327680, 5, 129, 327680, 5, 130, 327680, 5, 131, 327680, 5, 132, 327680, 5, 133, 327680, 5, 134, 327680, 5, 135, 327680, 5, 136, 327680, 5, 655430, 327680, 5, 655431, 327680, 5, 655432, 327680, 5, 655433, 327680, 5, 655434, 327680, 5, 655435, 327680, 5, 655436, 327680, 5, 655437, 327680, 5, 655438, 327680, 5, 655439, 327680, 5, 655440, 327680, 5, 655441, 327680, 5, 655442, 327680, 5, 655443, 327680, 5, 655444, 327680, 5, 655445, 327680, 5, 655446, 327680, 5, 655447, 327680, 5, 655448, 327680, 5, 655449, 327680, 5, 655450, 327680, 5, 655451, 327680, 5, 655452, 327680, 5, 655453, 327680, 5, 655454, 327680, 5, 655455, 327680, 5, 655456, 327680, 5, 655457, 327680, 5, 655458, 327680, 5, 655459, 327680, 5, 655460, 327680, 5, 655461, 327680, 5, 655462, 327680, 5, 655463, 327680, 5, 655464, 327680, 5, 655465, 327680, 5, 655466, 327680, 5, 655467, 327680, 5, 655468, 327680, 5, 655469, 327680, 5, 655470, 327680, 5, 655471, 327680, 5, 655472, 327680, 5, 655473, 327680, 5, 655474, 327680, 5, 655475, 327680, 5, 655476, 327680, 5, 655477, 327680, 5, 655478, 327680, 5, 655479, 327680, 5, 655480, 327680, 5, 655481, 327680, 5, 655482, 327680, 5, 655483, 327680, 5, 655484, 327680, 5, 655485, 327680, 5, 655486, 327680, 5, 655487, 327680, 5, 655488, 327680, 5, 655489, 327680, 5, 655490, 327680, 5, 655491, 327680, 5, 655492, 327680, 5, 655493, 327680, 5, 655494, 327680, 5, 655495, 327680, 5, 655496, 327680, 5)

[node name="SpikeWallMap" type="TileMap" parent="."]
material = SubResource("CanvasItemMaterial_f4ms5")
tile_set = ExtResource("1_0wfw1")
format = 2
layer_0/tile_data = PackedInt32Array(131069, 327680, 5, 196605, 327680, 5, 262141, 327680, 5, 327677, 327680, 5, 393213, 327680, 5, 458749, 327680, 5, 524285, 327680, 5, 589821, 327680, 5, 655357, 327680, 5, 458750, 196608, 1342177281, 524286, 196608, 1342177281, 589822, 196608, 1342177281, 655358, 196608, 1342177281, 131070, 196608, 1342177281, 196606, 196608, 1342177281, 262142, 196608, 1342177281, 327678, 196608, 1342177281, 393214, 196608, 1342177281)
script = ExtResource("4_m4gou")

[node name="Area2D" type="Area2D" parent="SpikeWallMap"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikeWallMap/Area2D"]
position = Vector2(-97, 351)
shape = SubResource("RectangleShape2D_4q0av")

[node name="MoveBehavior" type="Node2D" parent="SpikeWallMap"]
position = Vector2(3.49691e-06, -40)
script = ExtResource("4_3m17m")

[node name="Camera2D" type="Camera2D" parent="SpikeWallMap"]
position = Vector2(440, 376)
zoom = Vector2(0.915, 0.915)
limit_left = -192
limit_top = 0
limit_bottom = 704
script = ExtResource("2_7bj6n")

[node name="AudioStreamPlayer2DSpikes" type="AudioStreamPlayer2D" parent="SpikeWallMap"]
stream = ExtResource("6_0pqkv")
volume_db = 3.545
pitch_scale = 0.85
